# gnome-canteens

./: Cargo.toml
assets/: #gnome-ovgu-canteen.glade#  gnome-ovgu-canteen.glade  gnome-ovgu-canteen.glade~
src/: checklist.rs  entry.rs  main.rs  saved.rs
src/ui/: canteen_list.glade
