[package]
name = "gnome-canteens"
version = "0.1.0"
authors = ["Johannes Wünsche <johannes.wuensche97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.0", features = ["v3_16"] }
gio = { version = "", features = ["v2_44"] }
openmensa-rs = { git = "https://github.com/jwuensche/openmensa-rs.git" }