[package]
name = "gnome-canteens"
version = "0.1.0"
authors = ["Johannes Wünsche <johannes.wuensche97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openmensa-rs = "^0.1"
vgtk = { git = "https://github.com/bodil/vgtk.git" }
